--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="rgba(71, 145, 0, 1)" />
     <meta name="description" content="Dragon app to get info about them" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
